# bot_calorie

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: constants.py  keyboards.py  main.py
app/db/: messages_db.py  pg_connection_manager.py  statistics_db.py  users_db.py
app/external_api/: telegram_api.py
app/handler/: handler_edit_weight.py
app/handler/commands/: command_activity_coef.py  command_exports.py  command_help.py  command_start.py  command_statistics.py
app/handler/messages/: handler_text.py
app/handler_commands/: command_activity_coef.py  command_help.py  command_start.py
app/models/: daily_statistics_model.py  handlers_model.py  telegram_response_models.py
app/models/telegram/: tg_request_models.py  tg_response_models.py
app/schemas/: postgresql_schemas.py
app/tests/: test_calorie_balance_msg.py  test_parse_kg.py  test_parse_weight.py
app/utils/: configuration_logger.py  create_chart.py  generation_test_data.py  message_buidler.py  parse_text.py  settings.py  utils.py
src/: main.py
