[tool.poetry]
name = "bot-kalori"
version = "0.1.0"
description = ""
authors = ["valentin.s"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
pydantic-settings = "^2.2.1"
uvloop = "^0.19.0"
uvicorn = "^0.29.0"
python-telegram-bot = "^21.1.1"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"
aiopg = "^1.4.0"
pytest = "^8.1.1"
pytz = "^2024.1"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 51

#[tool.ruff.lint]
#ignore = ['F401']
